--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "e-commerce-site",
   "version": "0.1.0",
   "private": true,
+    "homepage": "https://mo2002222.github.io/e-commerce-site/",
+  "description": "A simple e-commerce site built with React",
   "dependencies": {
     "bootstrap": "^5.3.8",
     "react": "^16.8.6",
@@ -16,8 +18,10 @@
     "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+    },
   "eslintConfig": {
     "extends": "react-app"
   },
