--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "e-commerce-site",
   "version": "0.1.0",
   "private": true,
-    "homepage": "https://mo2002222.github.io/e-commerce-site/",
+  "homepage": "https://mo2002222.github.io/e-commerce-site/",
   "description": "A simple e-commerce site built with React",
   "dependencies": {
     "bootstrap": "^5.3.8",
@@ -16,12 +16,12 @@
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
-    "build": "vite build && copy dist\\index.html dist\\404.html", 
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-    },
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
   }
